# 2A202600806-VuMinhDuy-Day14

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: main_agent.py
analysis/: failure_analysis.md  generate_analysis.py  make_reflections.py
analysis/reflections/: reflection_TEMPLATE.md  reflection_Vu_Minh_Duy.md
data/: corpus.jsonl  golden_set.jsonl  knowledge_base.py  synthetic_gen.py
engine/: llm_client.py  llm_judge.py  ragas_metrics.py  retrieval_eval.py  runner.py
frontend/: live_eval.py  server.py
frontend/static/: app.js  index.html  style.css
reports/: benchmark_results.json  summary.json
